--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.1.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
